<resources>

    <string name="app_name">Ability</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="play">Play</string>
    <string name="ranking">Ranking</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_play">Play</string>
	<string name="title_activity_ranking">Ranking</string>
	<string name="title_activity_help">Help</string>
	<string name="title_activity_play_simon">Play Simon</string>
	<string name="title_activity_dodging_play">Play Dodging</string>
	<string name="title_activity_settings">Settings</string>

	<string name="simon">Simon</string>
    <string name="dodging">Dodging</string>
	
	<string name="round">Round : </string>
    <string name="score">Score : </string>
    
	<string name="simon_ranking">Simon Ranking</string>
    <string name="dodging_ranking">Dodging Ranking</string>
    
    <string name="end_game_alert_save_ranking">Do you want save Score in Ranking?</string>
    
  
    <string name="date_base_name">Ranking</string>
    <string name="simon_ranking_nametable">RankingSimon</string>
    <string name="dodging_ranking_nametable">RankingDodging</string>
    
    
   <string name="game_menu_return">Return Game</string>
   <string name="game_menu_restart">Restart Game</string>
   <string name="game_menu_help">Help</string>
   <string name="game_menu_options">Settings</string>
   <string name="game_menu_exit">Exit Game</string>


</resources>