<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

     <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent" >
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simon" />
        
		<TableLayout android:id="@+id/TableLayout01"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		xmlns:android="http://schemas.android.com/apk/res/android">
		
		<TableRow android:id="@+id/TableRow01">
				<TextView 
				    android:id="@+id/SimonGreen"
					android:width="150dp"
					android:height="150dp"
					android:background="#00FF00"
					android:onClick="colorClicked"
					android:clickable="true"/>
				
				
				<TextView
				    android:id="@+id/SimonRed"
					android:width="150dp"
					android:height="150dp"
					android:background="#FF0000"
					android:onClick="colorClicked"
					android:clickable="true"/>
				

				
			</TableRow>
			
			<TableRow android:id="@+id/TableRow02">
	
				<TextView
				    android:id="@+id/SimonBlue"
				    android:width="150dp"
				    android:height="150dp"
				    android:background="#0000FF"
				    android:onClick="colorClicked"
				    android:clickable="true"/>
	
				<TextView
				    android:id="@+id/SimonYellow"
				    android:width="150dp"
				    android:height="150dp"
				    android:background="#FFFF33"
				    android:onClick="colorClicked"
				    android:clickable="true"/>
	
			</TableRow>
			
			<TableRow android:id="@+id/TableRow03">
	
			<TextView
			    android:id="@+id/simon_score"
			    android:width="100dp"
			    android:text="@string/score"/>
			</TableRow>
			
			<TableRow android:id="@+id/TableRow04">
	
		        <Button
		            android:id="@+id/button_Start_Simon"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/play"
		            android:onClick="startSimon"/>
		        
     		        <Button
		            android:id="@+id/button_exit_Simon"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/exit"/>
		        
			</TableRow>	
			
		</TableLayout>

	</LinearLayout>
	




   
</RelativeLayout>
